--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,5 @@
 .jumbotron { 
-    background-image: url(../html/cover_background.jpg);
+    background-image: url(../cover_background.jpg);
     height: 450px;
     font-family: monospace;
 }
